Added fields for mobile apps
This allows you to use the app with API endpoints from within a mobile app.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@
 - fixed internal type of RelativeURLField
 - added image_mobile field
 - added data_class field
+- added fields for mobile apps
 
 === 0.1 ===
 
