--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,8 @@
 === 0.1.X (onggoing, to be released as 0.2) ===
 
+
+- added generic positions for ImageSlide
+- added inline admin for ImageSlide
 - prepared app for Django1.9 and Python3.5
 - fixed internal type of RelativeURLField
 - added image_mobile field
