--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,6 @@
 === 0.1.X (onggoing, to be released as 0.2) ===
 
+- fixed override of generic positions admin template
 - added custom reorder.js
 
 === 0.2. ===
